tests/output/self_hosted/no_member_assign_error.txt
tests/no_member_assign_error.oomph:2: error: type 'Str' has no member named 'lolz'

    "hello".lolz = "wut"
                 ^

